--- a/game-store/package.json
+++ b/game-store/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.713.0",
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.0",
     "@mui/material-nextjs": "^6.2.0",
     "@mui/styles": "^6.2.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "digitalocean": "^1.2.1",
     "formidable": "^3.5.2",
